--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Formulario</title>
+    <title>Form</title>
 </head>
 <body>
      <div class="container">
         <div class="header">
-            <h3>Cadastre o seu veículo para vender mais rápido!</h3>
-        </div>
+            <h3>Business Car</h3>
+            <img src="car.logo-removebg-preview.png" alt="">
+         </div>
+
         <div class="form-container">
             <div class="form-header">
                 <p>Formulário</p>
@@ -25,7 +27,7 @@
                     name="title"
                     id="title"
                     class="block"
-                    placeholder="um título para anunciar o seu carro"
+                    placeholder="Insira um título para anunciar o seu carro"
                     minlength="1"
                     maxlength="30"
                     required/>
